[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/DrawnOldEnglish-jDmy.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://main.gd" type="Script" id=2]
[ext_resource path="res://Assets/SmugfaceCrowley.png" type="Texture" id=3]

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 30
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 37
font_data = ExtResource( 1 )

[node name="main" type="Control"]
margin_left = 48.0
margin_top = 115.0
margin_right = 88.0
margin_bottom = 155.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
anchor_left = -10.542
anchor_top = -0.795
anchor_right = -10.542
anchor_bottom = -0.795
margin_left = 37.68
margin_top = -83.5784
margin_right = 1237.68
margin_bottom = 516.422
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Lives" type="SpinBox" parent="."]
margin_left = 151.613
margin_top = 403.02
margin_right = 283.613
margin_bottom = 433.02
__meta__ = {
"_edit_use_anchors_": false
}

[node name="YourGuess" type="SpinBox" parent="."]
margin_left = 154.013
margin_top = 350.892
margin_right = 284.013
margin_bottom = 378.892
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpinBox3" type="SpinBox" parent="."]
margin_left = -196.184
margin_top = 208.289
margin_right = -122.184
margin_bottom = 247.289
min_value = 1.0
value = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="YourGuess2" type="Label" parent="."]
margin_left = -22.433
margin_top = 336.361
margin_right = 126.567
margin_bottom = 388.361
custom_fonts/font = SubResource( 1 )
text = "Your Guess"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="YourLives" type="Label" parent="."]
margin_left = -17.7898
margin_top = 389.038
margin_right = 126.21
margin_bottom = 441.038
custom_fonts/font = SubResource( 2 )
text = "Your Lives"

[node name="MoreLess" type="Label" parent="."]
margin_left = 384.405
margin_top = 368.729
margin_right = 686.405
margin_bottom = 420.729
custom_fonts/font = SubResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Interface" type="Label" parent="."]
margin_left = -24.3566
margin_top = -87.364
margin_right = 288.643
margin_bottom = 181.636
custom_fonts/font = SubResource( 3 )
text = "Hello Darling,
Let's Play A Game
Guess A Number
From 1 to 100"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="value_changed" from="YourGuess" to="." method="_on_YourGuess_value_changed"]
